
version 0.7.5 - Currently available as svn snapshot
  - NEW: experimental MPI modules.
  - BUG: None is treated as False now in Py_Object_As_Bool.
  - NEW: Optimize binary allele handling. Copying of alleles are now
		faster than regular alleles.
  - NEW: Optimize BernulliTrials and recombination. Recombination
		under certain conditions is 1/3 faster now.


version 0.7.4 - (Rev 518) Nov 5, 2006
  - BUG: fix simulator.population() function
  - NEW/CHG: add order parameter to population arr function series.
	Changed functions are:
		C++ level: population::genoBegin(true), genoBegin(sp, true)
			population::infoBegin(idx, order), infoBegin(idx, subPop, order)
		Python level: population::arrGenotype(True), arrGenotype(sp, True)
			population::indInfo(idx, order), indInfo(idx, subPop, order)
			population::arrIndInfo(order), arrIndInfo(subPop, order)
  - NEW: test/test_21_performance is added to keep track of performance
	improvements.
  - NEW: (minor) performance improvement of randomMating and maSelector.
  - NEW: significant performance improvement of mating schemes.
	controlled randomMating: typically 150s => 90s
  - NEW: add instruction for using intel c++ compiler, which usually improve
   performance by 20% to 30%.		
  - BUG: recombinator set sex in a wrong way.
  - NEW: experimental large pedigree sampling largePedigreeSample
  - NEW: experimental support for merlin/vc and merlin regression
  - CHG (internal): overhaul of ascertainment operators and file save stuff.
  - NEW: add 'useDefault' option to simuOpt paramter specification.


version 0.7.3 - (Rev 470) Oct 2, 2006
  - CHG: change the allele type of long module to unsigned short, since
		2^16 seems to be enough even for long allele cases.
  - NEW: add -c option to simuCluster.py to allow it to se command instead
		of the default qaub
  - NEW: add reference count debugging in simulator.evolve (require
		specially built python.)
  - BUG: fix memory leaks in stator, util.cpp (pyExec) and simuPOP_common.i